/genres endpoint added
