# src/main/java/com/example/anime/mappers/DTOToGenreDomainMapper.java
@@ -1,11 +1,26 @@
 package com.example.anime.mappers;
 
 import com.example.anime.DTO.anilist.GenreDTO;
+import com.example.anime.DTO.requested.RequestedGenreDTO;
 import com.example.anime.domain.Genre;
 import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
+
+import java.util.List;
 
 @Mapper(componentModel = "spring")
 public interface DTOToGenreDomainMapper {
     Genre dtoToDomain(GenreDTO.Genre genre);
+
+    RequestedGenreDTO.Genre domainToDto(Genre genre);
+
+    List<RequestedGenreDTO.Genre> domainToDtoList(List<Genre> genres);
+
+    // Преобразует список Genre в RequestedGenreDTO
+    default RequestedGenreDTO domainToRequestedDto(List<Genre> genreList) {
+        RequestedGenreDTO dto = new RequestedGenreDTO();
+        dto.setGenres(domainToDtoList(genreList));
+        return dto;
+    }
 
 }
